# ChangeLog for dev-ruby/compass-import-once
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 May 2014; Hans de Graaff <graaff@gentoo.org>
  compass-import-once-1.0.4.ebuild:
  Use the slot that compass expects.

*compass-import-once-1.0.4 (14 May 2014)

  14 May 2014; Hans de Graaff <graaff@gentoo.org>
  +compass-import-once-1.0.4.ebuild, +metadata.xml:
  Initial import. New dependency for compass 1.x versions.
