@@ -1,1 +1,2 @@
 DIST compass-import-once-1.0.4.gem 9216 SHA256 3d4f33f976f6d8e17d9c0c75147ffcd550a44b08075713cbbaa9604812dfcfd9 SHA512 0d65e094c21cbf8c133b083ed50675a0c5e0095d2257f3e085f15fa44322a8cf6cbbe7da7d26e3203576eb4d0ec6689efc0025a0be854ce3081c22fb89bd0055 WHIRLPOOL d07a077a41be41f4d73fe426a9b324da8060bfdb0a6dea031dc70048525b41c4fed608460722c7918ed90522913e18b3172353ef421122fc44f1e877b6c89c28
+DIST compass-import-once-1.0.5.gem 9728 SHA256 38978ffed0d332e8526e87e1befd1b6831774ca7d8350c5adb5b9eef167fc72e SHA512 2ef723803341892b34a4bbe691b32ddd266a125c5e3faf8034c473566d70c7a8c0931f1a02abe64c243fe62f2a204cc8e53b951dd88c440eada4ec2dfc19856b WHIRLPOOL 70804304882031ea8d12a8fcfa56687e77a594e3b86235a56157218306dc9898a64c9a79279fcdd0225ff439fdf3912ae7f3e7100c963fcbf981eacca5bdc3a9
