@@ -1,0 +1,31 @@
+# Copyright 1999-2014 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=5
+USE_RUBY="ruby19 ruby20 ruby21"
+
+RUBY_FAKEGEM_TASK_DOC=""
+RUBY_FAKEGEM_EXTRADOC="README.md"
+
+RUBY_FAKEGEM_EXTRAINSTALL="VERSION"
+
+inherit ruby-fakegem
+
+DESCRIPTION="Speed up your Sass compilation by making @import only import each file once"
+HOMEPAGE="http://compass-style.org/"
+
+LICENSE="MIT"
+SLOT="1.0"
+KEYWORDS="~amd64"
+IUSE="test"
+
+ruby_add_rdepend "
+	>=dev-ruby/sass-3.2 <dev-ruby/sass-3.5
+"
+
+ruby_add_bdepend "test? ( dev-ruby/sass-globbing )"
+
+all_ruby_prepare() {
+	sed -i -e '/bundler/I s:^:#:' Rakefile || die
+}
