@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*compass-import-once-1.0.5 (11 Sep 2014)
+
+  11 Sep 2014; Hans de Graaff <graaff@gentoo.org>
+  +compass-import-once-1.0.5.ebuild:
+  Version bump.
+
   14 May 2014; Hans de Graaff <graaff@gentoo.org>
   compass-import-once-1.0.4.ebuild:
   Use the slot that compass expects.
